# research-agent-platform

./: .gitignore  main.py  pyproject.toml
db/: Chat_history.db  chroma.sqlite3
experiments/: run_conversation.ipynb
src/agents/rag_agent/: agent.py  call_back.py  tool.py
src/agents/rag_agent/config/: embedchain.yaml
src/agents/sqlite_agent/: agent.py  mcp_client.py
src/model_serving/: cli_serving.sh  models.py
src/model_serving/scripts/: vllm.sh
src/resources/agents/: agent.py  main_agent.py  sqlite_alchemy.py
src/resources/agents/root_agent/: main_agent.py
src/resources/agents/sqlite_agent/: sqlite_alchemy.py
src/resources/mcp_configure/: mcp-alchemy.json
src/resources/mcp_server/: mcp_alchemy.py
src/resources/tools/: __init__.py  get_weather.py  say_goodbye.py  say_hello.py
src/services/: agent_runner.py
test_agent/: current.db
test_agent/root_agent/: agent.py
test_agent/root_agent/sqlite_agent/: agent.py
